--- a/restaurantStyle.css
+++ b/restaurantStyle.css
@@ -24,7 +24,7 @@ hr
 body
 {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: rgb(0, 165, 0, 0.5);
+	background-color: rgb(0, 165, 0, 0.5) !important;
 }
 
 a 
